--- a/src/ConsoleAlgorithms/ConsoleAlgorithms.csproj
+++ b/src/ConsoleAlgorithms/ConsoleAlgorithms.csproj
@@ -50,14 +50,19 @@
     <Compile Include="IntroString.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Tech\Calculation.cs" />
+    <Compile Include="Tech\ZipCreate.cs" />
     <Compile Include="Sort\InsertionSort2.cs" />
     <Compile Include="Sort\InsertionSort.cs" />
+    <Compile Include="Test\CalculateStringTests.cs" />
     <Compile Include="Test\TestInsertionSort.cs" />
+    <Compile Include="Test\ZipCreateTests.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
     <None Include="packages.config" />
   </ItemGroup>
+  <ItemGroup />
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
        Other similar extension points exist, see Microsoft.Common.targets.
